fix: bubble z-index

--- a/src/components/Bubble/styles.css
+++ b/src/components/Bubble/styles.css
@@ -13,6 +13,7 @@
   border: 0;
   border-radius: 100%;
   transition: .3s;
+  z-index: 99;
 }
 
 .Bubble:hover {
